--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>ALBEYOND</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/style.css">
@@ -29,7 +29,7 @@
                 </div>
             </div>
             <div class="welcome-txt">
-                <p class='big'>the <span>ART</span> of <span>OCEAN</span></p>
+                <p class='big'>THE <span>ART</span> OF <span>OCEAN</span></p>
                 <p class="leading">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur.</p>
                 <a href='#' class='btn'>LEARN MORE</a>
             </div>
