--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="welcome-txt">
                 <p class='big'>THE <span>ART</span> OF <span>OCEAN</span></p>
                 <p class="leading">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur.</p>
-                <a href='#' class='btn'>LEARN MORE</a>
+                <a href='#' onclick='scrollPageTo(services)' class='btn'>LEARN MORE</a>
             </div>
         </div>
     </header>
